<resources>
    <string name="app_name">LightApp</string>
    <string name="color_preview">Color preview</string>
    <string name="send">Send</string>
    <string name="state">State</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="white">White</string>
    <string name="brightness">Brightness</string>
</resources>
